--- a/01_vue/03_html_vue.html
+++ b/01_vue/03_html_vue.html
@@ -8,17 +8,18 @@
 </head>
 <body>
   <div id="app">
-    <p id="name">name : {{ message }} </p>
-    <input id="inputName" type="text" v-model = 'message'>
+    <p id="name"> name : {{message}} </p>
+    <input id="inputName" type="text" v-model ='message'>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script>
-    const app = new Vue({
+    const app = new vue({
       el:'#app',
       data:{
         message:'',
       }
     })
   </script>
+
 </body>
 </html>
